--- a/webproject-Indvidual-Reilly/WebContent/simpleFormInsert.html
+++ b/webproject-Indvidual-Reilly/WebContent/simpleFormInsert.html
@@ -32,11 +32,11 @@ footer {
 
 <body>
 <header>
-<h1> Insert Data </h1>
+<h1> Add Task to List to Do </h1>
 </header>
 
 <nav>
-<a href="/webproject/simpleFormSearch.html">Search Data</a> <br>
+<a href="/webproject-Indvidual-Reilly/simpleFormSearch.html">Search to do list</a> <br>
 </nav>
 
 <section>
@@ -44,9 +44,8 @@ footer {
 	
 	<form action="SimpleFormInsert" method="POST">
 	
-		User Name: <input type="text" name="userName"> <br />
-		Email: <input type="text" name="email"> <br />
-		Phone: <input type="text" name="phone"> <br />
+		Task to do: <input type="text" name="ACTIVITY"> <br />
+		Due date: <input type="text" name="DUE"> <br />
 		
 		<input type="submit" value="Submit" />
 	</form>
