--- a/webproject-Indvidual-Reilly/WebContent/simpleFormSearchJSP.html
+++ b/webproject-Indvidual-Reilly/WebContent/simpleFormSearchJSP.html
@@ -32,11 +32,11 @@ footer {
 
 <body>
 <header>
-<h1> Search Data (JSP) </h1>
+<h1> Search List (JSP) </h1>
 </header>
 
 <nav>
-<a href="/webproject/simpleFormInsert.html">Insert Data</a> <br>
+<a href="/webproject-Indvidual-Reilly/simpleFormInsert.html">Insert Task to List to Do</a> <br>
 </nav>
 
 <section>
@@ -44,7 +44,7 @@ footer {
 	
 	<form action="simpleFormSearchJSP.jsp" method="POST">
 	
-		User Name: <input type="text" name="keyword"> <br />
+		Task to do: <input type="text" name="keyword"> <br />
 		
 		<input type="submit" value="Search" />
 	</form>
